inscirption form desing

--- a/game/inscription.html
+++ b/game/inscription.html
@@ -5,17 +5,25 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="./favicon.ico" />
+    <link rel="icon" href="./favicon.ico"/>
     <link rel="stylesheet" href="./css/custom.css">
 
 </head>
 
 <body>
 <main>
-    <header>
-        inscription
-    </header>
+    <div class="wrapper">
+        <h1>Inscription</h1>
+        <form action="" id="registration">
+            <div class="field">
+                <label for="username">Surnom:</label>
+            <input name="username" id="username" type="text">
+            </div>
+
+            <input class="button" type="submit">
+        </form>
+    </div>
 </main>
-  <script src="./js/inscription.js"></script>
+<script src="./js/register.js"></script>
 </body>
 </html>
