--- a/game/validation.html
+++ b/game/validation.html
@@ -13,9 +13,9 @@
 <body>
 <main>
     <header>
-        register
+        inscription
     </header>
 </main>
-  <script src="./js/register.js"></script>
+  <script src="./js/inscription.js"></script>
 </body>
 </html>
