--- a/tableau-de-score/index.html
+++ b/tableau-de-score/index.html
@@ -12,13 +12,11 @@
 
 <body>
 <main>
-    <header>
-        <div class="score-wrapper">
-            <h1>Scores</h1>
-            <div id="score-list"></div>
-        </div>
-    </header>
+    <div class="wrapper">
+        <h1>Scores</h1>
+        <div id="score-list"></div>
+    </div>
 </main>
-  <script src="js/main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
