--- a/game/inscription.html
+++ b/game/inscription.html
@@ -24,6 +24,6 @@
         </form>
     </div>
 </main>
-<script src="./js/register.js"></script>
+<script src="./js/inscription.js"></script>
 </body>
 </html>
