--- a/game/validation.html
+++ b/game/validation.html
@@ -5,17 +5,26 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="./favicon.ico" />
+    <link rel="icon" href="./favicon.ico"/>
     <link rel="stylesheet" href="./css/custom.css">
 
 </head>
 
 <body>
 <main>
-    <header>
-        inscription
-    </header>
+    <div class="wrapper">
+        <h1>Validation de tag</h1>
+        <form action="" id="validation">
+            <div class="field">
+                <label for="username">Qui es tu ?</label>
+                <select name="username" id="username">
+                </select>
+            </div>
+
+            <input class="button" type="submit">
+        </form>
+    </div>
 </main>
-  <script src="./js/inscription.js"></script>
+<script src="./js/validation.js"></script>
 </body>
 </html>
