add mercure popup

--- a/tableau-de-score/index.html
+++ b/tableau-de-score/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+<div id="alert-popup" class="hidden">Quelqu'un vient de trouver un tag !</div>
 <main>
     <div class="wrapper">
         <h1>Scores</h1>
