--- a/tableau-de-score/index.html
+++ b/tableau-de-score/index.html
@@ -16,6 +16,7 @@
     <div class="wrapper">
         <h1>Scores</h1>
         <div id="score-list"></div>
+        <div id="max-tag"></div>
     </div>
 </main>
 <script src="js/main.js"></script>
